admin/assets/scss/admin.scss
/* ... */
.wrap-slimstat .postbox.large {
  width: 49.1%;
}

.wrap-slimstat .postbox.extralarge {
  width: 73.9%;
}

.wrap-slimstat .postbox.full-width {
  width: 98.7%;
}

.sortable-placeholder {
  background-color: #ccc;
  border: 1px dashed #bbb;
  margin-bottom: 9px;
}

/* Single Report: Header and Header Buttons */
.wrap-slimstat .postbox h3 {
  border-bottom: 1px solid #ddd;
  font-size: 1.2em;
  margin: 0;
  padding: 10px;
}

.wrap-slimstat .postbox.tall h3 {
  cursor: auto;
}

.slimstat-tooltip-content {
  display: none;
}

.slimstat .no-refresh .refresh {
  display: none;
}

/* Single Report: Header and Header Buttons - Pagination */
[id^="slim_"] p.pagination {
  font-weight: 600;
  color: black;
  font-size: 14px;
}

[id^="slim_"] p.pagination a {
  color: $grayOne;
  float: right;
  margin-left: 5px;
}

/* Single Report: Inside */
[id^="slim_"] .inside {
  height: 240px;
  margin: 0 !important;
  overflow: auto;
  padding: 0 !important;
  margin-bottom: 45px !important;
}

.wrap-slimstat .postbox.tall .inside {
  height: 465px;
}

.map-wrap {
  .inside {
    height: 370px !important;
    @media (max-width: 767px) {
      height: auto !important;
    }
  }
}

[id^="slim_"] p {
  border-bottom: 1px solid $graySix;
  line-height: 1.5em;
  margin: 0;
  min-height: 20px;
  padding: 10px 10px;
  position: relative;
  word-wrap: break-word;
}

[id^="slim_"] p:last-child {
  border-bottom: 0;
}

[id^="slim_"] p .slimstat-tooltip-trigger.corner {
  -moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  filter: FlipH;
  -ms-filter: "FlipH";
  left: 0;
}

[id^="slim_"] p span {
  float: right;
}

[id^="slim_"] p span.pageview-screenres {
  margin-left: 10px;
}

[id^="slim_"] .inline-icon {
  background-color: transparent;
  background-position: 0 0;
  background-repeat: no-repeat;
  display: inline-block;
  height: 18px;
  line-height: 18px;
  margin-right: 5px;
  vertical-align: middle;
  width: 16px;
  filter: grayscale(40%);
  transition: 0.3s all ease-out;

  &:hover {
    filter: grayscale(0);
  }
}

[id^="slim_"] .spaced {
  margin-left: 15px;
}

#dashboard-widgets-wrap .whois {
  display: none;
}

/* Single Report: Debug Message */
[id^="slim_"] .debug {
  background-color: #000;
  color: #fff;
  display: block;
  font-family: monospace;
  opacity: 0.8;
  padding: 20px;
  position: relative;
}

/* Single Report: Color Coded Entries */
.little-color-box {
  background-color: #eee;
  border: 1px solid #aaa;
  display: block;
  float: left;
  height: 15px;
  margin-right: 10px;
  width: 15px;
}

[id^="slim_"] .header {
  background-color: $grayFive;
  color: #111;
}

[id^="slim_"] .header.is-search-engine,
.little-color-box.is-search-engine {
  background-color: #e2dbff;
  color: $grayOne;
}

[id^="slim_"] .header.is-direct,
.little-color-box.is-direct {
  background-color: $grayFive;
  color: #111;
}

[id^="slim_"] .header.is-known-user,
.little-color-box.is-known-user {
  background-color: #ddf0ff;
}

[id^="slim_"] .header.is-known-visitor,
.little-color-box.is-known-visitor {
  background-color: #ffe9c8;
}

[id^="slim_"] .header.is-spam,
.little-color-box.is-spam {
  background-color: #eeff89;
  color: #222;
}

[id^="slim_"] p.loading {
  text-align: center;
  width: 100%;
  padding: 0;
  margin: 0;
  top: 50%;
  line-height: 0;
  transform: translateY(-50%);
  overflow: hidden;
}

[id^="slim_"] p.nodata {
  border: 0;
  color: #999;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
}

/* Single Report: Chart */
.chart-placeholder {
  height: 280px;
  overflow: hidden;
}

body {
  &.slimstat-admin-page {
    /* Hide all non-Slimstat notices in the admin */
    div[class*="-notice"]:not(.slimstat-notice):not(.slimstat-migration-notice),
    div[class*="admin-notice"]:not(.slimstat-notice):not(.slimstat-migration-notice),
    .notice:not(.slimstat-notice):not(.slimstat-migration-notice),
    .update-nag:not(.slimstat-notice):not(.slimstat-migration-notice),
    .error:not(.slimstat-notice):not(.slimstat-migration-notice),
    .astra-notice-wrapper,
    .cky-admin-notice {
      display: none !important;
    }
  }
}

/* Single Report: Modal Window */
.ui-widget-overlay {
  background-color: #222;
  filter: alpha(opacity=60);
  height: 100%;
  opacity: 0.6;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100 !important;
}

.ui-dialog.slimstat .ui-dialog-titlebar {
  background: #4b8df8;
  border: 0;
  border-radius: 0;
  color: #fff;
  font-family: "Open Sans", sans-serif;
  font-size: 1.3em;
  font-weight: normal;
  height: 22px;
  line-height: 1.3em;
  margin: 0;
  padding: 5px 10px;
}

.tooltip-item-title {
  font-size: 13px;
  font-weight: 500;
}
.tooltip-item-content {
  font-size: 13px;
  font-weight: normal;
  font-style: italic;
}

.ui-dialog.slimstat .ui-dialog-titlebar-close {
  background-color: transparent;
  border: 0;
  color: #fff;
  float: right;
  line-height: 1.3em;
  padding: 0;
}

.ui-dialog.slimstat .ui-dialog-titlebar-close:before {
  content: "\e803";
  font-family: slimstat;
}

.ui-dialog .ui-dialog-content {
  clear: both;
}

#slimstat-modal-dialog {
  background-color: #fff;
  display: none;
  max-height: 650px !important;
  overflow: auto;
  padding: 0;
  width: auto;
}

#slimstat-modal-dialog p {
  margin: 0;
  padding: 10px;
}

/* Dashboard Widgets */
#dashboard-widgets [id*="slim_p"].postbox .inside {
  height: 281px;
}

#dashboard-widgets [id*="slim_p"][id*="_01"].postbox .inside {
  height: 290px;
}

#dashboard-widgets #slim_p7_02.postbox .inside {
  height: 500px;
}

/* Fix nested postbox in dashboard widgets - hide only the direct inner report header */
#dashboard-widgets [id*="slim_p"].postbox > .inside > .postbox > h3 {
  display: none;
}
/* ... */

